--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,5 +1,5 @@
 *{
-    font-family: serif;
+    font-family: Arial, Helvetica, sans-serif;
     position: relative;
     border: 1px solid black;
 }
@@ -7,3 +7,19 @@
 body, html {
     position: relative;
   }
+
+/* .givePadding{
+    padding: 1%;
+} */
+
+.aboutUs{
+    border: red 1px solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.a1, .a2{
+    width: 100%;
+    display: inline-block;
+
+}
