--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,13 @@
 #header {
+    /* position:relative; */
     width: 100%;
     height: 100vh;
     border: 2px solid red;
     text-align: center;
+    
+}
+#headerContent{
+    position: relative;
     top:50%;
 }
 
@@ -12,8 +17,10 @@
 }
 
 #contactContent {
+    position: relative;
+    top: 20%;
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 35% 65%;
 }
 
 #map {
