--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,7 +1,7 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 body, html {
@@ -102,3 +102,25 @@ body, html {
     margin-inline: 190px;
 }
 /* thunb */
+
+.carousel-control-next {
+    height: 105px;
+}
+
+.carousel-control-prev {
+    height: 105px;
+}
+
+/* .carousel-indicators .active{ 
+    margin-top: 10px !important;
+} */
+
+/* ol {
+    margin-top: 100px
+} */
+.carousel-caption {
+    position: relative;
+    left: auto;
+    right: auto;
+    top: 150px;
+}
