--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@
 }
 
 .indexh3 {
-    margin-top: 25px;
+    margin-top: 15px;
     font-family: 'Noto Sans TC', sans-serif;
     font-weight: 600;
     font-size: 20px;
@@ -47,10 +47,29 @@
     color: rgb(90, 90, 90);
 }
 
+.indexp2 {
+    margin-top: 15px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: rgb(119, 118, 118);
+    display: -webkit-box;
+    -webkit-line-clamp: 3; 
+    -webkit-box-orient: vertical;
+    white-space: normal;
+    overflow:hidden;
+}
+
 .indexContent {
     padding-top: 30px;
     padding-left: 80px;
     padding-right: 80px;
+}
+
+.indexAbout{
+    height: 700px;
+    width:100%;
+    background-image: url(../img/index/chairs-2181919_1920.jpg);
 }
 
 .roundbutton {
@@ -116,9 +135,9 @@
 }
 
 
-div {
+/* div {
     border: 2px solid gray;
-}
+} */
 
 .banner {
     background-size: cover;
