--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Serif+TC:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800&display=swap');
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
@@ -9,23 +12,125 @@ html {
     position: relative;
 }
 
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    overflow: hidden;
+  }
+
 
 .rounded-circle {
     margin: 50px;
 }
 
-.carousel-item .row .col-md-2 a img {
-    /* margin-inline: 125px; */
+.indexh1 {
+    font-family: 'Jost';
+    font-weight: 700;
+    font-size: 70px;
+    color: rgb(0, 90, 175);
 }
 
-/* thunb */
+.indexh2 {
+    margin-top: 25px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    color: rgb(0, 90, 175);
+}
+
+.indexh3 {
+    margin-top: 25px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    color: rgb(0, 90, 175);
+}
+
+.indexp {
+    margin-top: 30px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: rgb(90, 90, 90);
+}
+
+.container .row .col-xl-6{
+padding-left: 100px;
+}
+
+.KAIMAUDiv{
+    height: 100vh;
+    overflow: hidden;
+    
+}
+
+.KAIMAUImage{
+    max-width: auto;
+    height: 90%;
+    position: relative;
+    left: -30%;
+    top: 10%;
+
+}
+
+.carousel-indicators {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding-left: 0;
+    margin-right: 15%;
+    margin-left: 15%;
+    list-style: none;
+    /* margin-top: 50%; */
+    width: 10%;
+    /* height: 10%; */
+  }
+  
+  .carousel-indicators li {
+    box-sizing: content-box;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    width: 30px;
+    height: 3px;
+    margin-right: 3px;
+    margin-left: 3px;
+    /* width: 0;
+    height: 0;
+    margin-right: 0;
+    margin-left:0; */
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: #fff;
+    background-clip: padding-box;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    opacity: .5;
+    transition: opacity 0.6s ease;
+  }
 
 .carousel-control-next {
-    height: 100px;
+    width: 3%;
+    /* height: 136px; */
+    height: 34%;
+
+    margin-right: 7.2%;
 }
 
 .carousel-control-prev {
-    height: 100px;
+    width: 3%;
+    /* height: 136px; */
+    height: 34%;
+    margin-left: 10%;
+
 }
 
 /* .carousel-indicators .active{ 
@@ -36,14 +141,13 @@ html {
     margin-top: 100px
 } */
 .carousel-caption {
-    position: relative;
+    /* position: relative;
     left: auto;
-    right: auto;
-    top: 200px;
+    right: auto; */
+    /* top: 90%; */
 }
 
 
-.carousel-item .row .col-md-2 a img {
-    /* color: white;
-    box-shadow: 2px 2px 2px  #615d5d ; */
+.carousel-item .row {
+    margin-left: 13%;
 }
