--- a/css/news.css
+++ b/css/news.css
@@ -8,9 +8,14 @@
 
 * {
     /* background-color: gray; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: relative;
 }
+
+.border {
+    border: 1px solid red;
+}
+
 
 /* 通用設定 */
 .indexh1 {
@@ -44,6 +49,11 @@
     color: rgb(90, 90, 90);
 }
 
+.px-30 {
+    padding-right: 30%;
+    padding-left: 30%;
+}
+
 .browserHeight {
     height: 100vh;
 }
@@ -72,11 +82,34 @@
 
 
 
-/* 產品新訊 */
-
 /* 服務項目 */
-/* .cardHeight{
-    height: 30%;
-} */
+
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0;
+    border-radius: 0.25rem; 
+}
+.card-img-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 2rem;
+    opacity: 0; 
+    transition: opacity .5s;
+}
+.card-img-overlay:hover {
+    opacity: 1; 
+}
+
 
 /* 客戶個案 */
