--- a/indexanime/index.css
+++ b/indexanime/index.css
@@ -65,7 +65,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
+  
   
 }
 .kaimau h1 {
@@ -78,9 +79,10 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: auto;
-  height: 100%;
+  height:100%;
   mix-blend-mode: multiply;
+  
+
 }
 .kaimau .kaimau__cover {
   position: absolute;
