--- a/css/contact.css
+++ b/css/contact.css
@@ -12,25 +12,31 @@
 }
 
 #content {
+    border: 2px solid red;
     width: 100%;
     height: 100vh;
 }
 
-#contactContent {
+/* #contactContent {
     position: relative;
     top: 20%;
     display: grid;
-    grid-template-columns: 35% 65%;
-}
+    grid-template-columns: 40% 60%;
+} */
 
 #map {
+    margin-left: 50px;
     border: 1px solid black;
     width: 100%;
-    height: 500px;
+    height: 100%;
 }
 
 #contactForm {
     border: 1px solid black;
     width: 100%;
-    height: 500px;
+    height: 100%;
+}
+
+#contactForm span{
+    color: red;
 }
