--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
     transition: all 0.6s ease-in-out;
-    z-index: 2;
+    z-index: 99;
 }
 
 .wapperContent{
@@ -84,7 +84,7 @@
 
 .menu-btn {
     position: fixed;
-    z-index: 3;
+    z-index: 100;
     right: 20px;
     /*left: 20px; */
     top: 20px;
@@ -289,6 +289,15 @@ input[type="checkbox"] {
     padding-left: 80px;
     padding-right: 80px;
     opacity: 0.3;
+}
+
+.smallDate{
+    color:#a8a8a8;
+}
+
+#indexImg{
+    width:100%;
+    object-fit: contain;
 }
 
 .indexAbout {
