--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -77,7 +77,7 @@ padding-left: 100px;
 }
 
 .carousel-indicators {
-    position: absolute;
+    position: relative;
     right: 0;
     bottom: 0;
     left: 0;
@@ -87,12 +87,12 @@ padding-left: 100px;
     -ms-flex-pack: center;
     justify-content: center;
     padding-left: 0;
-    margin-right: 15%;
-    margin-left: 15%;
+    margin-right: 25%;
+    margin-left: 28%;
     list-style: none;
     /* margin-top: 50%; */
-    width: 10%;
-    /* height: 10%; */
+    /* width: 10%; */
+    height: 5%;
   }
   
   .carousel-indicators li {
@@ -103,19 +103,41 @@ padding-left: 100px;
     height: 3px;
     margin-right: 3px;
     margin-left: 3px;
+    /* padding-top: 1%; */
     /* width: 0;
     height: 0;
     margin-right: 0;
     margin-left:0; */
     text-indent: -999px;
     cursor: pointer;
-    background-color: #fff;
+    background-color: black;
     background-clip: padding-box;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
+    border-top: 0 solid transparent;
+    border-bottom: 0 solid transparent;
     opacity: .5;
     transition: opacity 0.6s ease;
   }
+
+ .carousel-control-prev, .carousel-control-next {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 50%;
+  color: yellow;
+  text-align: center;
+  opacity: 0.3;
+  transition: opacity 0.15s ease;
+  border: 0;
+}
+
+
 
 .carousel-control-next {
     width: 3%;
@@ -131,6 +153,10 @@ padding-left: 100px;
     height: 34%;
     margin-left: 10%;
 
+}
+
+button>svg{
+    color: yellow;
 }
 
 /* .carousel-indicators .active{ 
