--- a/css/news.css
+++ b/css/news.css
@@ -15,6 +15,9 @@
 .border {
     border: 1px solid red;
 }
+body{
+    overflow: hidden;
+}
 
 
 /* 通用設定 */
@@ -113,3 +116,33 @@
 
 
 /* 客戶個案 */
+
+.frame{
+    width: 100vw;
+    height: 100vh;
+}
+.gallery{
+    /* border: 1px solid blue; */
+    width: 100vw;
+    height: auto;
+    padding: 3% 0;
+    overflow-X: scroll;
+    white-space: nowrap;
+}
+/* 自訂滾動條樣式! */
+.gallery::-webkit-scrollbar{
+    height: 8px;
+}
+.gallery::-webkit-scrollbar-thumb {
+    background-color: rgb(0, 90, 175);
+    border-radius: 4px;  
+  }
+.posterBox{
+    width: 20%;
+    border: 3px solid red;
+    margin: 0 5%;
+    display: inline-block;
+}
+.posters {
+    width: 100%;  height: auto;
+}
