--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -4,7 +4,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 body,
@@ -22,10 +22,12 @@ html {
   }
 
 
+  /* 關於凱茂 */
 .rounded-circle {
     margin: 50px;
 }
 
+/* 字形 */
 .indexh1 {
     font-family: 'Jost';
     font-weight: 700;
@@ -60,7 +62,7 @@ html {
 .container .row .col-xl-6{
 padding-left: 100px;
 }
-
+/* 關於凱茂 */
 .KAIMAUDiv{
     height: 100vh;
     overflow: hidden;
@@ -68,34 +70,42 @@ padding-left: 100px;
 }
 
 .KAIMAUImage{
-    max-width: auto;
-    height: 90%;
+    max-width: 150%;
+    height: 80%;
     position: relative;
-    left: -30%;
+    left: -20%;
     top: 10%;
 
 }
 
-.carousel-indicators {
-    position: relative;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 15;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: center;
-    justify-content: center;
-    padding-left: 0;
-    margin-right: 25%;
-    margin-left: 28%;
-    list-style: none;
-    /* margin-top: 50%; */
-    /* width: 10%; */
-    height: 5%;
-  }
-  
-  .carousel-indicators li {
+.about-title-en {
+    margin-top: 46%;
+}
+
+.about-title-cn{
+    margin-top: 30%;
+
+}
+/* 合作夥伴 */
+.carousel-indicators{
+    position:absolute;
+    right:0;
+    bottom:0;
+    left:0;
+    z-index:15;
+    display:-ms-flexbox;
+    display:flex;
+    -ms-flex-pack:center;
+    justify-content:center;
+    padding-left:0;
+    margin-right:15%;
+    margin-left:19%;
+    list-style:none;
+    margin-bottom: 0%;
+}
+
+
+.carousel-indicators li {
     box-sizing: content-box;
     -ms-flex: 0 1 auto;
     flex: 0 1 auto;
@@ -130,7 +140,7 @@ padding-left: 100px;
   -ms-flex-pack: center;
   justify-content: center;
   width: 50%;
-  color: yellow;
+  color: white;
   text-align: center;
   opacity: 0.3;
   transition: opacity 0.15s ease;
@@ -156,7 +166,7 @@ padding-left: 100px;
 }
 
 button>svg{
-    color: yellow;
+    color: black;
 }
 
 /* .carousel-indicators .active{ 
@@ -176,4 +186,140 @@ button>svg{
 
 .carousel-item .row {
     margin-left: 13%;
+}
+
+/* cube */
+.cube{
+    margin-left: 68%;
+    position: relative;
+    width: 300px;
+    height: 300px;
+    transform-style: preserve-3d;
+    /* transform: rotateX(-30deg); */
+    animation: animate 4s linear infinite;
+}
+
+@keyframes animate
+{
+    0%
+    {
+        transform: rotateX(-30deg) rotateY(0deg);
+    }
+    100%
+    {
+        transform: rotateX(-30deg) rotateY(360deg);
+    }
+}
+
+.cube div
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+.cube div span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#151515,#00ec00);
+    transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
+}
+.top{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #00ec00;
+    transform: rotateX(90deg) translateZ(150px);
+}
+
+.top::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #0f0;
+    transform: translateZ(-380px);
+    filter: blur(20px);
+    box-shadow: 0 0 120px rgba(0, 225, 0, 0.2),
+    0 0 200px rgba(0, 225, 0, 0.4),
+    0 0 300px rgba(0, 225, 0, 0.6),
+    0 0 400px rgba(0, 225, 0, 0.8),
+    0 0 500px rgba(0, 225, 0, 1);
+}
+
+/* cube1 */
+.cube1{
+    margin-left: 5%;
+    position: relative;
+    width: 300px;
+    height: 300px;
+    transform-style: preserve-3d;
+    /* transform: rotateX(-30deg); */
+    animation: animate 4s linear infinite;
+}
+
+@keyframes animate
+{
+    0%
+    {
+        transform: rotateX(-30deg) rotateY(0deg);
+    }
+    100%
+    {
+        transform: rotateX(-30deg) rotateY(360deg);
+    }
+}
+
+.cube1 div
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+.cube1 div span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#151515,#00ec00);
+    transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
+}
+.top{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #00ec00;
+    transform: rotateX(90deg) translateZ(150px);
+}
+
+.top::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #0f0;
+    transform: translateZ(-380px);
+    filter: blur(20px);
+    box-shadow: 0 0 120px rgba(0, 225, 0, 0.2),
+    0 0 200px rgba(0, 225, 0, 0.4),
+    0 0 300px rgba(0, 225, 0, 0.6),
+    0 0 400px rgba(0, 225, 0, 0.8),
+    0 0 500px rgba(0, 225, 0, 1);
 }
