--- a/css/news.css
+++ b/css/news.css
@@ -100,12 +100,24 @@ body{
     border: 0;
     border-radius: 0.25rem; 
 }
+.card-img,
+.card-img-top,
+.card-img-bottom {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  /* width: 100%; */
+  height: 100%;
+  /* filter: blur(1px); */
+}
 .card-img-overlay {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    color: #fff;
+    /* background-color: rgb(0, 90, 175); */
+    border-radius: 0.25rem; 
     padding: 2rem;
     opacity: 0; 
     transition: opacity .5s;
