--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -294,7 +294,7 @@ button>svg{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#151515,#00ec00);
+    background: linear-gradient(#000,#005AAF);
     transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
 }
 .top{
@@ -303,7 +303,7 @@ button>svg{
     left: 0;
     width: 300px;
     height: 300px;
-    background: #00ec00;
+    background: #005AAF;
     transform: rotateX(90deg) translateZ(150px);
 }
 
@@ -314,12 +314,12 @@ button>svg{
     left: 0;
     width: 300px;
     height: 300px;
-    background: #0f0;
+    background: #000;
     transform: translateZ(-380px);
     filter: blur(20px);
-    box-shadow: 0 0 120px rgba(0, 225, 0, 0.2),
-    0 0 200px rgba(0, 225, 0, 0.4),
-    0 0 300px rgba(0, 225, 0, 0.6),
-    0 0 400px rgba(0, 225, 0, 0.8),
-    0 0 500px rgba(0, 225, 0, 1);
+    box-shadow: 0 0 120px rgba(0, 0, 0, 0.2),
+    0 0 200px rgba(0, 0, 0, 0.4),
+    0 0 300px rgba(0, 0, 0, 0.6),
+    0 0 400px rgba(0, 0, 0, 0.8),
+    0 0 500px rgba(0, 0, 0, 1);
 }
