--- a/css/product.css
+++ b/css/product.css
@@ -8,7 +8,7 @@
 
 * {
     /* background-color: gray; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: relative;
 }
 
@@ -46,24 +46,52 @@
 
 .browserHeight {
     height: 100vh;
+    width: 100%;
 }
 
 .height90 {
     height: 90vh;
+    width: 100%;
 }
 
 .height70 {
     height: 70vh;
+    width: 100%;
 }
 
 .height50 {
     height: 50vh;
+    width: 100%;
 }
 
 .height30 {
     height: 30vh;
+    width: 100%;
 }
 
 .height10 {
     height: 10vh;
+    width: 100%;
+}
+
+
+/* Footer */
+.footer {
+    background-color: #cbcbcb;
+    color: #CCCCCC;
+    margin-bottom: -25px;
+    height: 300px;
+}
+
+
+.footer a {
+    color: #818181;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.footer a:hover {
+    color: #ffffff;
+    text-decoration: none;
+    transition: 0.5s;
 }
