--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -4,6 +4,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
+    /* overflow-x: hidden */
     /* border: 1px solid black; */
 }
 
@@ -70,21 +71,25 @@ padding-left: 100px;
 }
 
 .KAIMAUImage{
-    max-width: 150%;
-    height: 80%;
+    max-width:100%;
+    height: 95%;
     position: relative;
-    left: -20%;
+    left: 0%;
     top: 10%;
 
 }
 
 .about-title-en {
-    margin-top: 46%;
+    margin-top: 20%;
 }
 
 .about-title-cn{
-    margin-top: 30%;
+    margin-top: 5%;
 
+}
+
+.col-xl-5{
+    height: 100vh;
 }
 /* 合作夥伴 */
 .carousel-indicators{
@@ -187,13 +192,14 @@ button>svg{
 
 /* cube */
 .cube{
-    margin-left: 68%;
+    margin-left: 75%;
+    margin-top: 10%;
     position: relative;
-    width: 300px;
-    height: 300px;
+    width: 175px;
+    height: 175px;
     transform-style: preserve-3d;
     /* transform: rotateX(-30deg); */
-    animation: animate 4s linear infinite;
+    animation: animate 5s linear infinite;
 }
 
 @keyframes animate
@@ -223,48 +229,70 @@ button>svg{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#151515,#00ec00);
-    transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
+    background: linear-gradient(#005AAF,#fff);
+    transform: rotateY(calc(90deg * var(--i))) translateZ(87.5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-style: preserve-3d;
 }
+
+/* cube 字體 */
+.cube div span h4{
+    position: absolute;
+    font-size: 3em;
+    color: #fff;
+    transform: translateZ(50px);
+
+
+}
+
+.cube div span h4:nth-child(1){
+    transform: translateZ(0) translateY(20px);
+    color: rgba(0, 0, 0, 0.1);
+    filter: blur(2px);
+}
+
+/* cube 頂 */
 .top{
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
-    height: 300px;
-    background: #00ec00;
-    transform: rotateX(90deg) translateZ(150px);
+    width: 175px !important;
+    height: 175px !important;
+    background: #005AAF;
+    transform: rotateX(90deg) translateZ(87.5px);
 }
 
-.top::before{
+/* .top::before{
     content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
-    height: 300px;
-    background: #0f0;
-    transform: translateZ(-380px);
-    filter: blur(20px);
-    box-shadow: 0 0 120px rgba(0, 225, 0, 0.2),
-    0 0 200px rgba(0, 225, 0, 0.4),
-    0 0 300px rgba(0, 225, 0, 0.6),
-    0 0 400px rgba(0, 225, 0, 0.8),
-    0 0 500px rgba(0, 225, 0, 1);
-}
+    width: 200px;
+    height: 200px;
+    background: #005AAF;
+    transform: translateZ(-175px);
+    filter: blur(30px);
+    box-shadow: 0 0 120px rgba(0, 0, 225, 0.2),
+    0 0 200px rgba(0, 0, 225, 0.4),
+    0 0 300px rgba(0, 0, 225, 0.6),
+    0 0 400px rgba(0, 0, 225, 0.8),
+    0 0 500px rgba(0, 0, 225, 1);
+} */
 
 /* cube1 */
 .cube1{
-    margin-left: 5%;
+    margin-left: 55%;
     position: relative;
-    width: 300px;
-    height: 300px;
+    width: 150px;
+    height: 150px;
     transform-style: preserve-3d;
     /* transform: rotateX(-30deg); */
-    animation: animate 4s linear infinite;
+    animation: animate-right 4s linear infinite;
 }
 
-@keyframes animate
+@keyframes animate-left
 {
     0%
     {
@@ -291,36 +319,174 @@ button>svg{
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: linear-gradient(#000,#005AAF); */
-    background: linear-gradient(#005AAF,#000);
-    transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
+    background: linear-gradient(#005AAF,#fff);
+    transform: rotateY(calc(90deg * var(--i))) translateZ(75px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-style: preserve-3d;
 }
-.top{
+
+/* cube 字體 */
+.cube1 div span h2{
+    position: absolute;
+    font-size: 2em;
+    color: #fff;
+    transform: translateZ(40px);
+
+
+}
+
+.cube1 div span h2:nth-child(1){
+    transform: translateZ(0) translateY(20px);
+    color: rgba(0, 0, 0, 0.1);
+    filter: blur(2px);
+}
+
+.top1{
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
-    height: 300px;
+    width: 150px;
+    height: 150px;
     background: #005AAF;
-    transform: rotateX(90deg) translateZ(150px);
+    transform: rotateX(90deg) translateZ(75px);
 }
 
-.top::before{
+/* .top1::before{
     content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
-    height: 300px;
-    background: #000;
-    transform: translateZ(-380px);
-    filter: blur(20px);
-    box-shadow: 0 0 120px rgba(0, 0, 0, 0.2),
-    0 0 200px rgba(0, 0, 0, 0.4),
-    0 0 300px rgba(0, 0, 0, 0.6),
-    0 0 400px rgba(0, 0, 0, 0.8),
-    0 0 500px rgba(0, 0, 0, 1);
+    width: 170px;
+    height: 170px;
+    background: #005AAF;
+    transform: translateZ(-150px);
+    filter: blur(30px);
+    box-shadow: 0 0 120px rgba(0, 0, 225, 0.2),
+    0 0 200px rgba(0, 0, 225, 0.4),
+    0 0 300px rgba(0, 0, 225, 0.6),
+    0 0 400px rgba(0, 0, 225, 0.8),
+    0 0 500px rgba(0, 0, 225, 1);
+} */
+
+/* cube2 */
+.cube2{
+    margin-top: 0%;
+    margin-left: 76%;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    transform-style: preserve-3d;
+    /* transform: rotateX(-30deg); */
+    animation: animate-left 4s linear infinite;
 }
+
+@keyframes animate-left
+{
+    0%
+    {
+        transform: rotateX(-30deg) rotateY(0deg);
+    }
+    100%
+    {
+        transform: rotateX(-30deg) rotateY(360deg);
+    }
+}
+@keyframes animate-right
+{
+    0%
+    {
+        transform: rotateX(-30deg) rotateY(0deg);
+    }
+    100%
+    {
+        transform: rotateX(-30deg) rotateY(-360deg);
+    }
+}
+
+.cube2 div
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+.cube2 div span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#005AAF,#fff);
+    transform: rotateY(calc(90deg * var(--i))) translateZ(50px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-style: preserve-3d;
+}
+
+/* cube 字體 */
+.cube2 div span h2{
+    position: absolute;
+    font-size: 1.5em;
+    color: #fff;
+    transform: translateZ(30px);
+
+
+}
+
+.cube2 div span h2:nth-child(1){
+    transform: translateZ(0) translateY(20px);
+    color: rgba(0, 0, 0, 0.1);
+    filter: blur(2px);
+}
+
+.top2{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    background: #005AAF;
+    transform: rotateX(90deg) translateZ(50px);
+}
+
+/* .top2::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 150px;
+    height: 150px;
+    background:  #005AAF;
+    transform: translateZ(-100px);
+    filter: blur(30px);
+    box-shadow: 0 0 120px rgba(0, 0, 225, 0.2),
+    0 0 200px rgba(0, 0, 225, 0.4),
+    0 0 300px rgba(0, 0, 225, 0.6),
+    0 0 400px rgba(0, 0, 225, 0.8),
+    0 0 500px rgba(0, 0, 225, 1);
+} */
+
+/* 理念 */
+.concept .container{
+    /* margin-top: -30%;
+    /* margin-right: 70%; */
+    /* margin-left: 14%; */. */
+
+}
+
+.concept .indexp{
+    margin-top: 5%;
+
+    margin-left: 15%;
+    margin-right: 50%;
+   
+}
+
 /* hamburger */
 
 .wrapper {
