--- a/css/timeline.css
+++ b/css/timeline.css
@@ -25,7 +25,7 @@
   left: calc(50% - 1px);
   width: 2px;
   top: -50px;
-  background-color: rgb(68, 51, 26);
+  background-color: rgb(0, 90, 175);
   display: none;
   position: absolute;
   z-index: -100;
@@ -39,7 +39,7 @@
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
-  background-color: rgb(68, 51, 26);
+  background-color: rgb(0, 90, 175);
   left: 50%;
   transform: translateX(-50%);
 }
@@ -72,20 +72,20 @@
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
-  background-color: rgb(68, 51, 26);
+  background-color: rgb(0, 90, 175);
   left: 50%;
   top: 20%;
   transform: translateX(-50%);
 }
 
-.content {
+.content-timeline {
   width: calc(50% - 2rem);
   font-family: 'Playfair Display';
   font-family: 'Noto Serif TC', serif;
 }
 
 
-.content img {
+.content-timeline img {
   width: 300px;
   height: auto;
   position: relative;
