--- a/css/news.css
+++ b/css/news.css
@@ -8,7 +8,7 @@
 
 * {
     /* background-color: gray; */
-    /* border: 1px solid black; */
+    border: 1px solid black;
     position: relative;
 }
 
@@ -56,33 +56,41 @@ body{
     padding-right: 30%;
     padding-left: 30%;
 }
-
+.vh-10{
+    height: 10vh;
+}
+.vh-50{
+    height: 50vh;
+}
+.vh-25{
+    height: 25vh;
+}
 .browserHeight {
     height: 100vh;
 }
 
-.height90 {
-    height: 90vh;
-}
-
-.height70 {
-    height: 70vh;
-}
-
-.height50 {
-    height: 50vh;
-}
-
-.height30 {
-    height: 30vh;
-}
-
-.height10 {
-    height: 10vh;
+.show100{
+    width: 100%;
+    height: 100%;
 }
 
 /* 最新消息 */
 
+.carousel-indicators {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding-left: 0;
+    /* margin-right: 15%; */
+    /* margin-left: 15%; */
+    list-style: none;
+  }
 
 
 /* 服務項目 */
@@ -100,14 +108,18 @@ body{
     border: 0;
     border-radius: 0.25rem; 
 }
+
+.card-img-top {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  width: 100%;
+}
 .card-img,
-.card-img-top,
 .card-img-bottom {
   -ms-flex-negative: 0;
   flex-shrink: 0;
-  /* width: 100%; */
+  /* width: 100%;    原設定 */
   height: 100%;
-  /* filter: blur(1px); */
 }
 .card-img-overlay {
     position: absolute;
@@ -116,11 +128,14 @@ body{
     bottom: 0;
     left: 0;
     color: #fff;
-    /* background-color: rgb(0, 90, 175); */
+    background-color: rgb(0, 90, 175);
     border-radius: 0.25rem; 
     padding: 2rem;
     opacity: 0; 
     transition: opacity .5s;
+}
+.card-img-overlay a{
+    color: #fff;
 }
 .card-img-overlay:hover {
     opacity: 1; 
@@ -129,15 +144,11 @@ body{
 
 /* 客戶個案 */
 
-.frame{
-    width: 100vw;
-    height: 100vh;
-}
 .gallery{
     /* border: 1px solid blue; */
     width: 100vw;
     height: auto;
-    padding: 3% 0;
+    /* padding: 3% 0; */
     overflow-X: scroll;
     white-space: nowrap;
 }
@@ -151,9 +162,10 @@ body{
   }
 .posterBox{
     width: 20%;
-    border: 3px solid red;
-    margin: 0 5%;
+    /* border: 3px solid red; */
+    margin: 0 3%;
     display: inline-block;
+    white-space:pre-wrap;
 }
 .posters {
     width: 100%;  height: auto;
