--- a/css/index.css
+++ b/css/index.css
@@ -299,7 +299,7 @@ input[type="checkbox"] {
 }
 
 .indexImgDiv{
-    height:900px;
+    height:100vh;
     position:sticky;
     top:0;
     display: block;
