--- a/css/index.css
+++ b/css/index.css
@@ -219,8 +219,8 @@ input[type="checkbox"] {
 
 .intro {
 
-    background-color: rgb(255, 255, 255);
-    background-image: url('../img/index/intro.jpg');
+    /* background-color: rgb(255, 255, 255);
+    background-image: url('../img/index/intro.jpg'); */
     width: 100%;
     height: 100vh;
     background-position: center;
