--- a/css/news.css
+++ b/css/news.css
@@ -47,12 +47,20 @@ body{
     font-size: 17px;
     color: rgb(90, 90, 90);
 }
+.txtIn{
+    text-indent: 2em;
+}
+
 a:hover{
     text-decoration: none;
 }
 .px-30 {
     padding-right: 30%;
     padding-left: 30%;
+}
+.px-10 {
+    padding-right: 10%;
+    padding-left: 10%;
 }
 .vh-10{
     height: 10vh;
@@ -71,8 +79,64 @@ a:hover{
 
 /* 最新消息 */
 
-.carousel-indicators {
+
+/* 固定幻燈片高度為 50vh */
+.carousel-item {
+    position: relative;
+    display: none;
+    float: left;
+    width: 100%;
+    height: 50vh;
+    margin-right: -100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transition: -webkit-transform 0.6s ease-in-out;
+    transition: transform 0.6s ease-in-out;
+    transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out;
+}
+
+  /* 箭頭區塊調整為 width: 10%; */
+.carousel-control-prev,
+.carousel-control-next {
     position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 10%;
+    color: #fff;
+    text-align: center;
+    border: none;
+    opacity: 1;
+    transition: opacity 0.15s ease;
+}
+
+/* 左右箭頭調整成30px */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background: no-repeat 50% / 100% 100%;
+}
+
+/* fill那邊改成#005aaf(志宇設定的藍色) */
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23005aaf' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23005aaf' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
+
+.carousel-indicators {
+    height: 20px;     /* 控制列 height: 20px; */
+    position: relative;
     right: 0;
     bottom: 0;
     left: 0;
@@ -82,10 +146,47 @@ a:hover{
     -ms-flex-pack: center;
     justify-content: center;
     padding-left: 0;
-    /* margin-right: 15%; */
-    /* margin-left: 15%; */
+    margin-right: 10%;      /* 調整為10% */
+    margin-left: 10%;      /* 調整為10% */
     list-style: none;
-  }
+    /* border: 1px solid red; */
+}
+  
+.carousel-indicators li {
+    box-sizing: content-box;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    width: 3px;
+    height: 3px;
+    margin-right: 3px;
+    margin-left: 3px;
+    text-indent: 0;
+    cursor: pointer;
+    background-color: #fff;
+    background-clip: padding-box;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    opacity: .5;
+    transition: opacity 0.6s ease;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .carousel-indicators li {
+        transition: none;
+    }
+    }
+
+.carousel-indicators .active {
+    opacity: 1;
+}
+/* 新增控制button藍色方塊樣式 */
+.indicators{
+    height: 10px;
+    width: 10px;
+    margin: 5px;
+    background-color: #005aaf;
+    border: none;
+}
 
 
 /* 服務項目 */
