--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -6,9 +6,8 @@
     /* border: 1px solid black; */
 }
 
-body,
-html {
-    /* overflow-x: hidden; */
+body{
+    overflow-x: hidden;
 }
 
 /* 字型 */
@@ -46,6 +45,12 @@ html {
     padding-right: 30%;
     padding-left: 30%;
 }
+.txtR{
+    text-align: right;
+}
+.txtL{
+    text-align: left;
+}
 
 /* 關於凱茂 */
 .KAIMAUDiv{
@@ -62,63 +67,44 @@ html {
     top: 0;
 }
 
-
-
 /* 凱茂理念 */
-
-
-
-/* 合作夥伴 */
 
 .carousel {
     position: relative;
-    height: 180px;
+    /* border: 1px solid green; */
 }
 
 .carousel-inner {
     position: relative;
     width: 100%;
-    overflow: hidden;
-    height: 70%;
 }
 
 .carousel-indicators{
-    position:absolute;
+    /* border: 1px solid blue; */
+    height: 100%;
+    position:relative;
     right:0;
-    bottom:0;
+    bottom: 0;
     left:0;
-    z-index:15;
     display:-ms-flexbox;
     display:flex;
     -ms-flex-pack:center;
     justify-content:center;
-    padding-left:0;
-    /* padding-top: 5px; */
-    margin-right:15%;
-    margin-left:16%;
+    align-items:center;
     list-style:none;
-    margin-bottom: 0%;
 }
 
 
 .carousel-indicators li {
+    /* border: 1px solid red; */
     box-sizing: content-box;
     -ms-flex: 0 1 auto;
     flex: 0 1 auto;
     width: 30px;
-    height: 3px;
-    margin-right: 3px;
-    margin-left: 3px;
-    /* padding-top: 10px; */
-    padding-top: 10%;
-    /* width: 0;
-    height: 0;
-    margin-right: 0;
-    margin-left:0; */
-    margin-bottom: -10%;
-    text-indent: -999px;
+    height: 30px;
+    margin: 10px;
     cursor: pointer;
-    background-color: black;
+    background-color: #005aaf;
     background-clip: padding-box;
     border-top: 0 solid transparent;
     border-bottom: 0 solid transparent;
@@ -126,61 +112,49 @@ html {
     transition: opacity 0.6s ease;
   }
 
- .carousel-control-prev, .carousel-control-next {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: 1;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 50%;
-  color: white;
-  text-align: center;
-  opacity: 0.3;
-  transition: opacity 0.15s ease;
-  border: 0;
-  background: 0;
+ .carousel-control-prev,
+ .carousel-control-next {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 50%;
+    color: white;
+    text-align: center;
+    opacity: 0.3;
+    transition: opacity 0.15s ease;
+    border: 0;
+    background: 0;
 }
-
-
-
-.carousel-control-next {
-    width: 3%;
-    /* height: 136px; */
-    height: 55%;
-    margin-right: 7.2%;
-}
-
 .carousel-control-prev {
-    width: 3%;
-    /* height: 136px; */
-    height: 55%;
-    margin-left: 10%;
-
+    /* border: 1px solid red; */
+    width: 10%;
+    height: 100%;
 }
-
-button>svg{
-    color: black;
+.carousel-control-next {
+    /* border: 1px solid red; */
+    width: 10%;
+    height: 100%;
 }
-
 
 .carousel-item .row {
-    margin-left: 13%;
+    /* border: 1px solid red; */
+    justify-content: center;
+    align-items:center;
+    height: 250px;
 }
 
 .img-thumbnail{
-    padding:.25rem;
     background-color:#fff;
-    border:1px solid #dee2e6;
-    border-radius:.25rem;
-    /* max-width:100%; */
-    width: 100px;
-    height: 100px;
-    /* height:auto */
+    border: 0 solid #005aaf;
+    border-radius:.5rem;
+    width: 100%;
+    height: auto;
 }
 
 /* cube */
@@ -236,13 +210,11 @@ button>svg{
     font-size: 3em;
     color: #fff;
     transform: translateZ(50px);
-
-
 }
 
 .cube div span h4:nth-child(1){
     transform: translateZ(0) translateY(20px);
-    color: rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.2);
     filter: blur(2px);
 }
 
@@ -277,8 +249,8 @@ button>svg{
 /* cube1 */
 .cube1{
     position: absolute;
-    margin-left: 30%;    
-    margin-top: 45%;
+    margin-left: 25%;    
+    margin-top: 50%;
     
     width: 150px;
     height: 150px;
@@ -299,8 +271,8 @@ button>svg{
     }
 }
 
-.cube1 div
-{
+.cube1 div{
+    /* border: 1px solid red; */
     position: absolute;
     top: 0;
     left: 0;
@@ -309,6 +281,7 @@ button>svg{
     transform-style: preserve-3d;
 }
 .cube1 div span{
+    /* border: 1px solid red; */
     position: absolute;
     top: 0;
     left: 0;
@@ -327,14 +300,12 @@ button>svg{
     position: absolute;
     font-size: 2em;
     color: #fff;
-    transform: translateZ(40px);
-
-
+    transform: translateZ(30px);
 }
 
 .cube1 div span h2:nth-child(1){
     transform: translateZ(0) translateY(20px);
-    color: rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.3);
     filter: blur(2px);
 }
 
@@ -429,14 +400,12 @@ button>svg{
     font-size: 1.5em;
     color: #fff;
     transform: translateZ(30px);
-
-
 }
 
 .cube2 div span h2:nth-child(1){
     transform: translateZ(0) translateY(20px);
-    color: rgba(0, 0, 0, 0.1);
-    filter: blur(2px);
+    color: rgba(0, 0, 0, 0.3);
+    filter: blur(1px);
 }
 
 .top2{
@@ -467,6 +436,17 @@ button>svg{
 } */
 
 
+
+/* 合作夥伴 */
+
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23005aaf' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23005aaf' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
 
 /* hamburger */
 
