--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -29,6 +29,12 @@ body{
 
 }
 
+.aboutContent{
+    padding:70px; 
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
 /* 字型 */
 .indexh1 {
     font-family: 'Jost';
@@ -79,18 +85,28 @@ body{
 }
 
 /* 關於凱茂 */
+.aboutMain{
+    /* background-image: url(../img/aboutUs/grid-bg-01.png);
+    background-position: center; */
+    background-color: #f3f3f3;
+    /* background-size: 100% 100%;
+    background-repeat: no-repeat; */
+}
+
+
 .KAIMAUDiv{
     /* border: 1px solid black; */
     overflow: hidden;
+    
 }
 
 .KAIMAUImage{
     /* border: 1px solid red; */
     width: 100%;
     height: auto;
-    position: absolute;
-    left: 0;
-    top: 0;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
 }
 
 /* 凱茂理念 */
@@ -185,7 +201,7 @@ body{
 
 /* 里程碑 */
 .milestone{
-    background-color: #f3f3f3;
+    /* background-color: #f3f3f3; */
 }
 
 /* cube */
