--- a/css/timeline.css
+++ b/css/timeline.css
@@ -26,7 +26,7 @@
   top: -50px;
   background-color: rgb(0, 90, 175);
   display: none;
-  z-index: -100;
+  /* z-index: -100; */
 }
 
 .line:before,
@@ -52,7 +52,7 @@
   transform: translateX(-100%);
   transition: 600ms ease;
   position: relative;
-  z-index: -100;
+  /* z-index: -100; */
   margin: 50px 0;
   padding: 1rem;
   align-items: center;
@@ -85,7 +85,7 @@
   width: 300px;
   height: auto;
   position: relative;
-  z-index: -100;
+  /* z-index: -100; */
   
 }
 
