--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,6 @@
     line-height: 140%;
     opacity: 0.5;
     transition: 0.3s;
-
 }
 
 .wapperContentWord a:hover{
@@ -310,6 +309,7 @@ input[type="checkbox"] {
     background-repeat: no-repeat;
     background-color: #f3f3f3;
     padding-bottom:100px;
+    overflow-x: hidden;
 
 }
 
