--- a/new animetion/ia3.css
+++ b/new animetion/ia3.css
@@ -29,7 +29,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #FFF url(../index-01.svg);
+  background: #FFF url(./index-01.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 700px;
