--- a/css/index-animation.css
+++ b/css/index-animation.css
@@ -29,12 +29,12 @@
     mix-blend-mode: screen;
   }
 
-  /* .overlay{
+  .overlay{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: rgba(0,0,0,0.5);
     z-index: 1;
-  } */
+  }
