--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -10,6 +10,11 @@ body{
     overflow-x: hidden;
 }
 
+.Divider{
+    height:5px;
+    background-color: #f3f3f3;
+}
+
 .aboutBanner{
     
     background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url('../img/index/chairs-2181919_1920.jpg');
@@ -58,6 +63,14 @@ body{
 }
 .indexp {
     margin-top: 30px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: rgb(90, 90, 90);
+}
+
+.indexptimeline{
+    margin-top: 0px;
     font-family: 'Noto Sans TC', sans-serif;
     font-weight: 400;
     font-size: 17px;
@@ -205,7 +218,7 @@ body{
 }
 
 .img-thumbnail{
-    background-color:#fff;
+    background-color:#ffffff;
     border: 0 solid #005aaf;
     border-radius:.5rem;
     width: 100%;
@@ -214,7 +227,9 @@ body{
 
 /* 里程碑 */
 .milestone{
-    /* background-color: #f3f3f3; */
+    background-color: #f3f3f3;
+    margin-bottom: -60px;
+    padding-bottom: 60px;
 }
 
 /* cube */
