--- a/css/contact.css
+++ b/css/contact.css
@@ -3,19 +3,41 @@
     width: 100%;
     height: 100vh;
     text-align: center;
-    background-image: url(/資訊圖庫/A24.jpg);
+    background-image: url(../資訊圖庫/A25.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 
 }
 
 #headerContent {
     position: relative;
     top: 50%;
+    left:50%;
     color: #fff;
+    transform: translate(-50%,-50%);
 
 }
+#headerContent h1{
+    font-family: 'Jost';
+    font-weight:700;
+    font-size: 70px;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 7px rgba(0, 0, 0, 0.4);
+}
+#headerContent p{
+    margin-top: 10px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    color: rgb(255, 255, 255);
+}
+#headerContent img{
+    width:100px;
+    margin-bottom: 30px;
+}
+
 
 #content {
     width: 100%;
